# aws-security-mcp-server

./: .gitignore  COMPLETE_GUIDE.md  LICENSE  README.md  SETUP_GUIDE.md  TOOLS.md  pyproject.toml  test_server.py
config/: amazon_q_config.json  mcp-config.json
src/aws_security_mcp/: __init__.py  __main__.py  models.py  server.py
src/aws_security_mcp/models/: __init__.py  config.py  guardduty.py  iam.py  inspector.py  kms.py  macie.py  networkfirewall.py  responses.py  securityhub.py  shield.py  types.py  waf.py
src/aws_security_mcp/services/: __init__.py  accessanalyzer.py  acm.py  auditmanager.py  base.py  cloudtrail.py  cloudwatch.py  config.py  ec2_security.py  guardduty.py  iam.py  identitycenter.py  inspector.py  kms.py  macie.py  networkfirewall.py  secretsmanager.py  security_audit.py  securityhub.py  shield.py  verifiedaccess.py  vpclattice.py  waf.py
src/aws_security_mcp/utils/: aws_helpers.py
