[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aws-security-mcp-server"
version = "1.0.0"
description = "Comprehensive MCP server for AWS security management with 80+ tools across 21 AWS servics"
authors = [
    {name = "Vishnu", email = "rachapudivishnu9@gmail.com"},
]
dependencies = [
    "mcp>=1.0.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "pydantic>=2.5.0",
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
aws-security-mcp-server = "aws_security_mcp.server:main"

[project.entry-points."mcp.servers"]
aws-security = "aws_security_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aws_security_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/aws_security_mcp",
    "/README.md",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
